[project]
name = "tokenring"
version = "2023.4.10"

[metadata]
author = "Glyph"
author_email = "code@glyph.im"
description = "A backend for the `keyring` module which uses a hardware token to require user presence for any secret access, by encrypting your vault and passwords as Fernet tokens."
long_description = "file:README.rst"
url = "https://github.com/glyph/tokenring"
classifiers = [
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
]

[project.entry-points."keyring.backends"]
tokenlocal = "tokenring.local"
tokenbackground = "tokenring.agent_client"
